added sonar environmental variable