@@ -1,5 +1,10 @@
 pipeline {
   agent any
+
+  environment {
+        SONAR_SCANNER_OPTS = '--add-opens java.base/java.lang=ALL-UNNAMED'
+    }
+    
   stages {
     stage('Initial cleanup') {
       steps {
